--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,28 +24,39 @@ jobs:
       - name: Running Checkov
         run: checkov -d .
 
-  deploy:
-    # needs: [security_check]
+  validate:
     runs-on: ubuntu-latest
-    container: 
+    container:
       image: roxanapopa/docker-git-workflows:v0.1
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Setup AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-region: ${{ env.AWS_DEFAULT_REGION }}
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          role-to-assume: ${{ secrets.CICD_ROLE_ARN }}
-          role-session-name: cicd-session
-          role-duration-seconds: 3600
-      - name: Download dependencies
-        run: |
-          cd ${{ env.TEST_FOLDER }}
-          go mod download
-      - name: Run tests
-        run: |
-          cd ${{ env.TEST_FOLDER }}
-          go test -v .
+      - name: Terraform Init
+        run: terraform init
+      - name: Terraform validate
+        run: terraform validate
+#   deploy:
+#     # needs: [security_check]
+#     runs-on: ubuntu-latest
+#     container: 
+#       image: roxanapopa/docker-git-workflows:v0.1
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v2
+#       - name: Setup AWS credentials
+#         uses: aws-actions/configure-aws-credentials@v1
+#         with:
+#           aws-region: ${{ env.AWS_DEFAULT_REGION }}
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           role-to-assume: ${{ secrets.CICD_ROLE_ARN }}
+#           role-session-name: cicd-session
+#           role-duration-seconds: 3600
+#       - name: Download dependencies
+#         run: |
+#           cd ${{ env.TEST_FOLDER }}
+#           go mod download
+#       - name: Run tests
+#         run: |
+#           cd ${{ env.TEST_FOLDER }}
+#           go test -v .
