--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,7 +10,7 @@ defaults:
     shell: bash
 
 env:
-#   AWS_DEFAULT_REGION: us-east-1
+  AWS_DEFAULT_REGION: us-east-1
   TEST_FOLDER: test
 
 jobs:
@@ -43,6 +43,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Setup AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-region: ${{ env.AWS_DEFAULT_REGION }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: ${{ secrets.CICD_ROLE_ARN }}
+          role-session-name: cicd-session
+          role-duration-seconds: 3600
       - name: Terraform Init
         run: terraform init
       - name: Terraform Plan
